--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "make": "rm -rf ../student-site/static && yarn run build && mv ./build/* ../student-site/"
   },
   "eslintConfig": {
     "extends": "react-app"
